tui/tests/snapshots/notebook__add_dir_prompt_open.snap
---
source: tui/tests/notebook.rs
expression: text
snapshot_kind: text
---
 Directory actions dialog                                                                              [?] Show keymap 
[Browser]                                   ▐[Editor]                                                                   
 󰝰 Notes                                    ▐ 1 Welcome to Glues :D                                                     
   󱇗 Sample Note                            ▐                                                                           
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐                                                                           
                              ┌──────────────────────────Prompt───────────────────────────┐                             
                              │                                                           │                             
                              │  Enter directory name:                                    │                             
                              │  ┌─────────────────────────────────────────────────────┐  │                             
                              │  │                                                     │  │                             
                              │  └─────────────────────────────────────────────────────┘  │                             
                              │                                                           │                             
                              │  [Enter] Submit                                           │                             
                              │  [Esc] Cancel                                             │                             
                              │                                                           │                             
                              └───────────────────────────────────────────────────────────┘                             
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐
