tui/tests/snapshots/notebook__dir_actions_open.snap
---
source: tui/tests/notebook.rs
expression: text
snapshot_kind: text
---
 Directory actions dialog                                                                              [?] Show keymap 
[Browser]                                   ▐[Editor]                                                                   
 󰝰 Notes                                    ▐ 1 Welcome to Glues :D                                                     
   󱇗 Sample Note                            ▐                                                                           
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐ ┌────Directory Actions─────┐                                              
                                            ▐ │                          │                                              
                                            ▐ │   Add note               │                                              
                                            ▐ │   Add directory          │                                              
                                            ▐ │   Rename directory       │                                              
                                            ▐ │   Remove directory       │                                              
                                            ▐ │   Close                  │                                              
                                            ▐ │                          │                                              
                                            ▐ └──────────────────────────┘                                              
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐
