tui/tests/snapshots/notebook__editor_keymap_open.snap
---
source: tui/tests/notebook.rs
expression: text
snapshot_kind: text
---
 Note 'Sample Note' insert mode                                                                   [Ctrl+h] Show keymap 
[Browser] ┌──────────────────────────────────────────Editor Keymap───────────────────────────────────────────┐          
 󰝰 Notes  │                                                                                                  │          
   󱇗 Sampl│                                                                                                  │          
          │  | Mappings                                      | Description                                |  │          
          │  |-----------------------------------------------|--------------------------------------------|  │          
          │  | `Backspace`                                   | Delete one character before cursor         |  │          
          │  | `Ctrl+D`, `Delete`                            | Delete one character next to cursor        |  │          
          │  | `Ctrl+M`, `Enter`                             | Insert newline                             |  │          
          │  | `Ctrl+K`                                      | Delete from cursor until the end of line   |  │          
          │  | `Ctrl+J`                                      | Delete from cursor until the head of line  |  │          
          │  | `Ctrl+W`, `Alt+H`, `Alt+Backspace`            | Delete one word before cursor              |  │          
          │  | `Alt+D`, `Alt+Delete`                         | Delete one word next to cursor             |  │          
          │  | `Ctrl+U`                                      | Undo                                       |  │          
          │  | `Ctrl+R`                                      | Redo                                       |  │          
          │  | `Ctrl+C`, `Copy`                              | Copy selected text                         |  │          
          │  | `Ctrl+X`, `Cut`                               | Cut selected text                          |  │          
          │  | `Ctrl+Y`, `Paste`                             | Paste yanked text                          |  │          
          │  | `Ctrl+F`, `→`                                 | Move cursor forward by one character       |  │          
          │  | `Ctrl+B`, `←`                                 | Move cursor backward by one character      |  │          
          │  | `Ctrl+P`, `↑`                                 | Move cursor up by one line                 |  │          
          │  | `Ctrl+N`, `↓`                                 | Move cursor down by one line               |  │          
          │  | `Alt+F`, `Ctrl+→`                             | Move cursor forward by word                |  │          
          │  | `Atl+B`, `Ctrl+←`                             | Move cursor backward by word               |  │          
          │  | `Alt+]`, `Alt+P`, `Ctrl+↑`                    | Move cursor up by paragraph                |  │          
          │  | `Alt+[`, `Alt+N`, `Ctrl+↓`                    | Move cursor down by paragraph              |  │          
          │  | `Ctrl+E`, `End`, `Ctrl+Alt+F`, `Ctrl+Alt+→`   | Move cursor to the end of line             |  │          
          │  | `Ctrl+A`, `Home`, `Ctrl+Alt+B`, `Ctrl+Alt+←`  | Move cursor to the head of line            |  │          
          │  | `Alt+<`, `Ctrl+Alt+P`, `Ctrl+Alt+↑`           | Move cursor to top of lines                |  │          
          │  | `Alt+>`, `Ctrl+Alt+N`, `Ctrl+Alt+↓`           | Move cursor to bottom of lines             |  │          
          │  | `Ctrl+V`, `PageDown`                          | Scroll down by page                        |  │          
          │  | `Alt+V`, `PageUp`                             | Scroll up by page                          |  │          
          │                                                                                                  │          
          │  Thanks to tui-textarea                                                                          │          
          │                                                                                                  │          
          │                                                                                                  │          
          │                                      Press any key to close                                      │          
          │                                                                                                  │          
          └──────────────────────────────────────────────────────────────────────────────────────────────────┘          
                                            ▐ INSERT   󰝰 Notes  󱇗 Sample Note 
